# PAY2UHackathonFastAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  STYLEGUIDE.md  alembic.ini  pyproject.toml
.github/workflows/: .pre-commit-pr.yaml  deploy.yaml  pre-commit.yaml
alembic/: env.py
app/: main.py
app/api/v1/: __init__.py  routers.py
app/api/v1/endpoints/: __init__.py  subscriotion.py
app/auth/: __init__.py
app/core/: base.py  config.py  constants.py  exceptions.py  user.py
app/crud/: __init__.py  base.py  subscription.py
app/models/: __init__.py  card.py  subscription.py  user.py
app/schemas/: __init__.py  card.py  subscription.py  user.py
infra/: docker-compose-dev.yaml
